Update Activity3.java